
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 3, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note3

12-Apr-2013 Jean-Marie Simonet
 # [#30538] Joomla Update Options button displays even if you don't have permission. Thanks Mark

11-Apr-2013 Jean-Marie Simonet
 #$ [#30534] Missing Help Button in Joomla! Update component. Thanks Mark Dexter

10-Apr-2013 Mark Dexter
 # [#30466] Tags: Not shown in contacts. Thanks Peter Bui.

08-Apr-2013 Michael Babker
 # [#29916] MySQL connections are not closed.  Thanks Ian Goldstein
 # [#30508] Fixed typo $text = $text = '..';.  Thanks Piotr Konieczny
 # [#30504] List All Tags doesn't have pagination.  Thanks Mark Dexter
 # [#30505] Weblink module ignores end publishing date.  Thanks Thomas Hunziker
 # [#30507] *Edit contact display issue with editor.  Thanks Jean-Marie Simonet

08-Apr-2013 Jean-Marie Simonet
 $ Adding installation language pt-PT
 # [#30503] *Tags :can't save Compact Layout in Tags Component Options

07-Apr-2013 Michael Babker
 ^ [#30502] Replace use of JRequest in com_media
 # [#30489] *Regression: Menu Type UTF8 Alias prevents display in Menu Items Manager in J3
 ^ [#30499] Duplicate "btn" class in login module button.  Thanks Thomas Hunziker
 # [#30041] Use of '/' not being handled well on Windows Servers.  Thanks Parth Lawate
 # [#30054] Catchable fatal error: Object of class stdClass could not be converted to string in /plugins/system/debug/debug.php on line 303.  Thanks Ryan K.

07-Apr-2013 Jean-Marie Simonet
 # [#30226] *TAGS: Getting rid of all aspects concerning lang associations

06-Apr-2013 Mark Dexter
 # [#30453] Tags: Pagination not working when linking to a tag.